通过AIUI获取天气信息调试完成

--- a/eladmin-ha/pom.xml
+++ b/eladmin-ha/pom.xml
@@ -12,12 +12,18 @@
     <name>HA相关模块</name>
     <description>eladmin-ha</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>8</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -34,7 +40,7 @@
         <dependency>
             <groupId>org.java-websocket</groupId>
             <artifactId>java-websocket</artifactId>
-            <version>1.3.7</version>
+            <version>1.3.5</version>
         </dependency>
 
         <dependency>
@@ -43,22 +49,4 @@
             <version>2.6</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
