--- a/eladmin-system/src/main/resources/config/application-prod.yml
+++ b/eladmin-system/src/main/resources/config/application-prod.yml
@@ -135,3 +135,10 @@ file:
   # 文件大小 /M
   maxSize: 100
   avatarMaxSize: 5
+
+nodered:
+  host: 192.168.0.106
+  port: 1880
+  restContext: /nodered
+  restUri:
+    setWeather: /setWeather
